HelloApp/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetings
spec:
  selector:
    matchLabels:
      app: greetings
  template:
    metadata:
      labels:
        app: greetings
    spec:
      containers:
      - name: greetings
        image: registry.gitlab.com/akseliwc/dotnetapp:12
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
