HelloApp/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: greetings
spec:
  type: ClusterIP
  selector:
    app: greetings
  ports:
  - port: 80
    targetPort: 5000
