HelloApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - akseliwc.ddns.net
      secretName: letsencrypt
  rules:
  - host: akseliwc.ddns.net
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: greetings
            port:
              number: 80
  ingressClassName: nginx
